--- a/Style.css
+++ b/Style.css
@@ -1,12 +1,15 @@
 @font-face {
     font-family: 'Hyperblob';
-    src: url('Fonts/hyper-blob.otf') format('otf'),
-         url('Fonts/hyper-blob.ttf') format('ttf');
+    src: url('Fonts/hyper-blob.otf') format('opentype'),
+         url('Fonts/hyper-blob.ttf') format('truetype');
+}
+@Font-face{
    font-family: 'Mosk';
-    src: url('Fonts/MOSKOMAPPA-BF65a0f9f8c231e.otf') format('mappa');
+    src: url('Fonts/MOSKOMAPPA-BF65a0f9f8c231e.otf') format('opentype');
+}
 
 body{
-  font-family: 'Hyperblob' , sans-serif
+  font-family: 'Hyperblob', sans-serif
   color: yellow;
-  font-size: 3em:
+  font-size: 3em;
 }
