--- a/Style.css
+++ b/Style.css
@@ -13,7 +13,7 @@
     src: url('Fonts/MOSKOMAPPA-BF65a0f9f8c231e.otf') format('opentype');
 }
 
-body{
+fullscreen-text{
   font-family: 'Hyperblob', sans-serif
   color: yellow;
   font-size: 3em;
