--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,5 @@
+<style>
+
 @font-face {
     font-family: 'Hyperblob';
     src: url('Fonts/hyper-blob.otf') format('opentype'),
@@ -20,13 +22,13 @@ body{
   text-align: center:
   margin: auto;
 }
-<style>
+
 div.gallery {
   border: 1px solid #ccc;
 }
 
 div.gallery:hover {
-  border: 1px solid #777;
+  border: 1px solid #ccc;
 }
 
 div.gallery img {
@@ -34,10 +36,6 @@ div.gallery img {
   height: auto;
 }
 
-div.desc {
-  padding: 15px;
-  text-align: center;
-}
 
 * {
   box-sizing: border-box;
